# Omnilab

./: INSTALLATION_GUIDE.md  README.txt  TAURI_MIGRATION.md  index.html  manifest.json  package.json  supabase-schema.sql  vite.config.js
.github/workflows/: release.yml
src/: App.jsx  aiClient.js  aiConfig.js  aiPipeline.js  aiSupervisor.js  cacheService.js  databaseService.js  errorHandler.js  index.css  supabaseClient.js  syncService.js  useAI.js  useDatabase.js
src-tauri/: Cargo.toml  preload.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_commands.rs  commands.rs  database.rs  lib.rs  local_ai.rs  main.rs  state.rs
src/components/: AI Monitoring.jsx  AppLoader.jsx  ErrorBoundary.jsx  MonitoringPanel.jsx  NativeAIChat.jsx  SmartFillModal.jsx
