[package]
name = "omnilab"
version = "1.0.3"
description = "OmniLab — Sistema Nativo Local-First para Gestión de Laboratorio"
authors = ["OmniLab Forge"]
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
debug = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[lib]
name = "omnilab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
directories = "5"
open = "5"
base64 = "0.22"

tracing = "0.1"
tracing-subscriber = "0.3"
